// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component with placement bottom, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c9 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c9:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0 .c1 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement bottom-end, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement bottom-start, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c9 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c9:hover .c1 {
  display: block;
}

.c10 .c1 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0 .c1 {
  top: calc(100% + 5px);
  left: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement left, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c9 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c9:hover .c1 {
  display: block;
}

.c10 .c1 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover .c1 {
  display: block;
}

.c11 .c1 {
  top: calc(100% + 5px);
  left: 0%;
}

.c11:hover .c1 {
  display: block;
}

.c12 .c1 {
  right: calc(100% + 5px);
  bottom: 0%;
}

.c12:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c1 {
  right: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement left-end, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c9 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c9:hover .c1 {
  display: block;
}

.c10 .c1 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover .c1 {
  display: block;
}

.c11 .c1 {
  top: calc(100% + 5px);
  left: 0%;
}

.c11:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c1 {
  right: calc(100% + 5px);
  bottom: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement left-start, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c8 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c8:hover .c1 {
  display: block;
}

.c9 .c1 {
  top: calc(100% + 5px);
  right: 0%;
}

.c9:hover .c1 {
  display: block;
}

.c10 .c1 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover .c1 {
  display: block;
}

.c11 .c1 {
  top: calc(100% + 5px);
  left: 0%;
}

.c11:hover .c1 {
  display: block;
}

.c12 .c1 {
  right: calc(100% + 5px);
  bottom: 0%;
}

.c12:hover .c1 {
  display: block;
}

.c13 .c1 {
  right: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c13:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c1 {
  right: calc(100% + 5px);
  top: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement right, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement right-end, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c6 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c6:hover .c1 {
  display: block;
}

.c7 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c1 {
  bottom: 0px;
  left: calc(100% + 5px);
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement right-start, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c5 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c5:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c1 {
  top: 0%;
  left: calc(100% + 5px);
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement top, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement top-end, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .c1 {
  bottom: calc(100% + 5px);
  right: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component with placement top-start, should render properly 1`] = `
.c2 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .c1 {
  bottom: calc(100% + 5px);
  left: 0%;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="medly-popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
      data-testid="medly-popover"
    >
      Dummy popover
    </div>
  </div>
</div>
`;
